@@ -1,3 +1,11 @@
+2005-05-20  Frederic Crozat  <fcrozat@mandriva.com>
+
+	* server/gam_poll.c: (unregister_node),
+	(remove_directory_subscription), (prune_tree),
+	(gam_poll_remove_subscription_real):
+	factorize code and make sure node are unregistered
+	correctly. Fix crash from bug #303932.
+
 Thu May 19 22:57:25 CEST 2005 Daniel Veillard <veillard@redhat.com>
 
 	* gamin.spec.in: updated changelog section
